--- a/trunk/doc/report.bib
+++ b/trunk/doc/report.bib
@@ -1,5 +1,5 @@
 @inproceedings{lessons,
-   title={Lessons learned from contrasting a BLAS kernel implementations},
+   title={{Lessons Learned from Contrasting BLAS Kernel Implementations}},
    author={More, Andres},
    booktitle={XVIII Congreso Argentino de Ciencias de la Computacion},
    year={2013}
